完成收藏、订单生成、支付功能

--- a/project.config.json
+++ b/project.config.json
@@ -92,6 +92,18 @@
                 {
                     "name": "pages/feedback/main",
                     "pathName": "pages/feedback/main",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "pages/collect/main",
+                    "pathName": "pages/collect/main",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "pages/pay/main",
+                    "pathName": "pages/pay/main",
                     "scene": null
                 }
             ]
