--- a/src/app.json
+++ b/src/app.json
@@ -7,7 +7,9 @@
         "pages/search/main",
         "pages/goods_detail/main",
         "pages/goods_list/main",
-        "pages/feedback/main"
+        "pages/feedback/main",
+        "pages/collect/main",
+        "pages/pay/main"
     ],
     "window": {
         "navigationBarBackgroundColor": "#469DF8",
