--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "flyio": "^0.6.14",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mpvue": "^2.0.0",
     "vuex": "^3.6.2",
