--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,46 +1,5 @@
 {
-    "description": "项目配置文件。",
-    "setting": {
-        "urlCheck": false,
-        "es6": true,
-        "enhance": true,
-        "postcss": true,
-        "preloadBackgroundData": false,
-        "minified": true,
-        "newFeature": true,
-        "coverView": true,
-        "nodeModules": false,
-        "autoAudits": false,
-        "showShadowRootInWxmlPanel": true,
-        "scopeDataCheck": false,
-        "uglifyFileName": false,
-        "checkInvalidKey": true,
-        "checkSiteMap": true,
-        "uploadWithSourceMap": true,
-        "compileHotReLoad": false,
-        "useMultiFrameRuntime": true,
-        "useApiHook": true,
-        "useApiHostProcess": true,
-        "babelSetting": {
-            "ignore": [],
-            "disablePlugins": [],
-            "outputPath": ""
-        },
-        "enableEngineNative": false,
-        "bundle": false,
-        "useIsolateContext": true,
-        "useCompilerModule": true,
-        "userConfirmedUseCompilerModuleSwitch": false,
-        "userConfirmedBundleSwitch": false,
-        "packNpmManually": false,
-        "packNpmRelationList": [],
-        "minifyWXSS": true
-    },
-    "miniprogramRoot": "dist/wx/",
-    "compileType": "miniprogram",
-    "appid": "wx6337405430aef36e",
-    "projectname": "shop_server",
-    "libVersion": "2.15.0",
+    "setting": {},
     "condition": {
         "plugin": {
             "list": []
@@ -110,6 +69,19 @@
                 {
                     "name": "pages/topUps/main",
                     "pathName": "pages/topUps/main",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "pages/order_list/main",
+                    "pathName": "pages/order_list/main",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "pages/order_detail/main",
+                    "pathName": "pages/order_detail/main",
+                    "query": "order_id=1615207627683",
                     "scene": null
                 }
             ]
