--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "moment": "^2.29.1",
     "mpvue": "^2.0.0",
     "vuex": "^3.6.2",
-    "weui": "^2.4.3"
+    "weui": "^2.4.3",
+    "weui-miniprogram": "^1.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
